= Changelog

* Frontend
  ** Add new page to view user profiles.
  ** Add new page to edit your user settings.
  ** Add new page to confirm your email.
* API
  ** Add `/password` route to change your user password.
  ** Route `/desk/list` checks the `view_space` permission now.
  ** Respond with HTTP 409 at `/register` when the username is already taken.
  ** Restrict password characters.

== `0.6.3.3`

* Frontend
  ** Add explanation texts to popups.

== `0.6.3.2`

* Frontend
  ** Improve layout.
    *** Dropdown menu.
    *** Various buttons.

== `0.6.3.1`

* Frontend
  ** Add navigation buttons to dashboard.

== `0.6.3.0`

* Frontend
  ** Add new dashboard page.
  ** Support preloaded fonts.
* Backend
  ** Add `fonts` field to configuration.
* API
  ** Add support for multiple enumerable static messages on HTTP errors affecting some routes.
    *** `/space/join`
  ** Add optional `member` field to request body route of `/space/list`.

== `0.6.2.0`

* Frontend
  ** Add new page to view, add, edit and delete roles.
* API
  ** Add `/desk/edit` route.

== `0.6.1.0`

* Frontend
  ** Add new page to view space users, adjust their roles and kick them out.
* API
  ** HTTP 403 responses now contain the missing permission.
  ** Add space users to `/space/view/` response.
  ** Only show email address when allowed in `/profile` response.
  ** Add `/space/kick` route.
  ** Add `/space/user/role` route.

== `0.6.0.1`

* Fixed a bug where newly created spaces didn't get the `role_edit` permission for the default admin role.

== `0.6.0.0`

* Frontend
  ** Add new page to view and add roles.
  ** Add new page to edit specific roles.
* API
  ** Add `/role/create` route.
  ** Add `/role/delete` route.
  ** Add `/role/edit` route.
  ** The `/space/view` response now redundantly includes the `space` id for each role.
* Database
  ** Add new permission `role_edit`.
     Given to everyone who also has the `space_edit` permission.

== `0.5.0.0`

* API
  ** Add `/desk/delete` route.